# Vitae

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libvitaeconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  vitae.sln  vitae_config.h
ci/: test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp  vitae-cli.bash-completion  vitae-qt.pro  vitae-tx.bash-completion  vitaed.bash-completion
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  vitae-conf.md  zmq.md
doc/man/: Makefile.am  vitae-cli.1  vitae-qt.1  vitae-tx.1  vitae-wallet.1  vitaed.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  (+147 more)
(+1002 files in other folders)
