dist_man1_MANS=

if BUILD_VITAED
  dist_man1_MANS+=vitaed.1
endif

if ENABLE_QT
  dist_man1_MANS+=vitae-qt.1
endif

if BUILD_VITAE_CLI
  dist_man1_MANS+=vitae-cli.1
endif

if BUILD_VITAE_TX
  dist_man1_MANS+=vitae-tx.1
endif

if ENABLE_WALLET
if BUILD_VITAE_WALLET
  dist_man1_MANS+=vitae-wallet.1
endif
endif
